# foundation-web

./: .cvsignore  .gitignore  .htaccess  ChangeLog  Dockerfile  HACKING  MAINTAINERS  Makefile.am  README  advisory_board.html  announcement.html  autogen.sh  ballot-summary-2000.html  ballot-summary-2001.html  ballot-summary.html  ballot_summary.html  board_of_directors-2000.html  board_of_directors-2001.html  board_of_directors.html  charter.html  configure.in  directory.html  documentation.html  election-2000.html  election-2001.html  electionresults.html  electionrules-2000.html  electionrules-2001.html  electionrules.html  elections.html  evilsedhack  executive_director.html  faq-ln7.html  faq.html  foundation-web.doap  index.html  membership-form.html  membership-form.php  membership-list.html  membership-policy.html  (+10 more)
foundation.gnome.org/: .cvsignore  Makefile.am  foundation.css  htaccess  index.wml  news.wml
foundation.gnome.org/about/: .cvsignore  Makefile.am  bylaws.css  bylaws.html  bylaws.rst  default.tex  index.wml
foundation.gnome.org/about/advisoryboard/: Makefile.am  index.wml
foundation.gnome.org/about/charter/: Makefile.am  index.wml
foundation.gnome.org/about/history/: Makefile.am  index.wml
foundation.gnome.org/contact/: Makefile.am  index.wml
foundation.gnome.org/documentation/: .cvsignore  Makefile.am  charter.wml  index.wml
foundation.gnome.org/elections/: .cvsignore  Makefile.am  index.wml  overview.wml
foundation.gnome.org/elections/2000/: .cvsignore  Makefile.am  candidates.wml  index.wml  results.wml  rules.wml  verify.wml  voters.html  voters.wml
foundation.gnome.org/elections/2001/: .cvsignore  Makefile.am  candidates.wml  index.wml  rules.wml  verify.wml  voters.wml
foundation.gnome.org/elections/2002/: .cvsignore  Makefile.am  candidates.wml  index.wml  preliminary-results.wml  preliminary_results.wml  rules.wml  verify.wml  voters.wml
foundation.gnome.org/elections/2003/: .cvsignore  Makefile.am  candidates.wml  index.wml  preliminary-results.wml  results.txt  rules.wml  verify.wml  voters.wml
foundation.gnome.org/elections/2004/: Makefile.am  candidates.wml  index.wml  preliminary-results.wml  rules.wml  timeline.ics  verify.wml  voters.wml
foundation.gnome.org/elections/2005/: .cvsignore  Makefile.am  candidates.wml  index.wml  rules.wml  timeline.ics  voters.wml
foundation.gnome.org/elections/2006/: Makefile.am  candidates.wml  index.wml
foundation.gnome.org/elections/2007/: Makefile.am  candidates.wml  index.wml
foundation.gnome.org/elections/2009/: Makefile.am  candidates.wml  index.wml  mkical.py  rules.wml  timeline.ics
foundation.gnome.org/elections/2010/: Makefile.am  candidates.wml  index.wml  mkical.py  rules.wml
foundation.gnome.org/finance/: GNOME-Donations.ods  GNOME2009-budget-with-actuals.ods  Makefile.am  gnome-foundation-budget-2004.ods  gnome-foundation-budget-2010-final.ods  gnome-foundation-budget-2010.ods  gnome-foundation-budget-2011-july.ods  gnome-foundation-budget-2011-june.ods  gnome-foundation-budget-2011-may.ods  gnome-foundation-budget-2011.ods  guadec-budget-2006.ods  guadec-budget-2007.ods  guadec-budget-2008.ods  guadec-budget-consolidated.ods  index.wml
foundation.gnome.org/img/: Makefile.am
foundation.gnome.org/img/logos/: Makefile.am
foundation.gnome.org/img/reports/: Makefile.am
foundation.gnome.org/legal/: Makefile.am  index.wml
foundation.gnome.org/licensing/: Makefile.am  index.wml
foundation.gnome.org/licensing/guidelines/: Makefile.am  index.wml
foundation.gnome.org/licensing/usergroup/: Makefile.am  index.wml
foundation.gnome.org/membership/: .cvsignore  Makefile.am  application.old.wml  application.wml  index.wml  members.wml  membership-form.wml  membership-list.wml  membership-policy.wml  policy.wml
foundation.gnome.org/news/: Makefile.am  index.wml
foundation.gnome.org/organization/: .cvsignore  Makefile.am  advisory_board.wml  board_of_directors-2000.wml  board_of_directors-2001.wml  board_of_directors.wml  executive_director.wml  index.wml
foundation.gnome.org/organization/advisory/: Makefile.am  index.wml
foundation.gnome.org/organization/directors/: .cvsignore  Makefile.am  board-2000.wml  board-2001.wml  index.wml
foundation.gnome.org/organization/executive/: Makefile.am  index.wml
foundation.gnome.org/referenda/: Makefile.am  index.wml
foundation.gnome.org/referenda/2004-10/: .cvsignore  Makefile.am  index.wml  preliminary-results.wml  rules.wml  verify.wml  voters.wml
foundation.gnome.org/referenda/2005-10/: Makefile.am  index.wml  rules.wml  timeline.ics  voters.wml
foundation.gnome.org/reports/: Makefile.am  gnome-report-2009-Q3.html  gnome-report-2009-Q4.html  gnome-report-2010-Q1.html  gnome-report-2010-Q2.html  gnome-report-2010-Q3.html  gnome-report-2010-Q4.html  gnome-report-2011-Q1.html  gnome-report-2011-Q2.html  gnome-report-2011-Q3.html  index.wml
foundation.gnome.org/vote/: .cvsignore  COPYING  Makefile.am  blt.wml  index.wml  overview.wml  results.wml  vote.css  vote.wml  votes.wml
foundation.gnome.org/vote/2000/: candidates.wml  index.wml  rules.wml
foundation.gnome.org/vote/2001/: candidates.wml  index.wml  rules.wml
foundation.gnome.org/vote/2002/: candidates.wml  index.wml  rules.wml
foundation.gnome.org/vote/2003/: candidates.wml  index.wml  rules.wml
foundation.gnome.org/vote/2004/: candidates.wml  index.wml  rules.wml
foundation.gnome.org/vote/2004-10/: index.wml  preliminary-results.wml  rules.wml  verify.wml  voters.wml
foundation.gnome.org/vote/2005/: candidates.wml  index.wml  rules.wml
foundation.gnome.org/vote/2005-10/: index.wml  rules.wml  voters.wml
foundation.gnome.org/vote/2006/: candidates.wml  index.wml  rules.wml
foundation.gnome.org/vote/2007/: candidates.wml  index.wml  rules.wml
foundation.gnome.org/vote/2007-10/: index.wml
foundation.gnome.org/vote/2009/: candidates.wml  index.wml  rules.wml
foundation.gnome.org/vote/2010/: candidates.wml  index.wml  rules.wml
foundation.gnome.org/vote/2011/: candidates.wml  index.wml  rules.wml  voting-instructions.txt
(+133 files in other folders)
