SUBDIRS= documentation elections organization membership img

urlpath =
                                                                                                                                                            
page_SCRIPTS = \
        index.html	\
        overview.html	\
	default.css
                                                                                                                                                            
page_DATA = \
        index.html \
        robots.txt
                                                                                                                                                            
include $(top_srcdir)/rules.common

