SUBDIRS= 2000 2001 2002 2003

urlpath =
                                                                                                                                                            
page_SCRIPTS = \
        index.html
                                                                                                                                                            
include $(top_srcdir)/rules.common

