SUBDIRS= 2000 2001 2002 2003

urlpath = /elections
                                                                                                                                                            
page_SCRIPTS = \
        index.html	\
	overview.html
                                                                                                                                                            
include $(top_srcdir)/rules.common

