SUBDIRS = 

urlpath = /finance
 
page_SCRIPTS = \
	index.html

page_DATA =						\
	gnome-foundation-fiscal-year-04-and-03.pdf	\
	gnome-foundation-fiscal-year-03-and-02.pdf	\
	gnome-foundation-accountant-03.pdf		\
	guadec-2004-financial-summary.pdf		\
	gnome-foundation-fiscal-year-2007.pdf		\
	GNOME2009-budget-with-actuals.ods


include $(top_srcdir)/rules.common
