SUBDIRS = 

urlpath = /finance
 
page_SCRIPTS = \
	index.html

page_DATA =						\
	gnome-foundation-fiscal-year-04-and-03.pdf	\
	gnome-foundation-fiscal-year-03-and-02.pdf	\
	gnome-foundation-accountant-03.pdf		\
	guadec-2004-financial-summary.pdf		\
	gnome-foundation-fiscal-year-2007.pdf		\
	GNOME2009-budget-with-actuals.ods \
	gnome-foundation-budget-2004.ods \
	gnome-foundation-budget-2010-final.ods \
	gnome-foundation-budget-2010-summary.pdf \
	gnome-foundation-budget-2010.ods \
	gnome-foundation-budget-2011-may.ods \
	gnome-foundation-budget-2011-june.ods \
	gnome-foundation-budget-2011-july.ods \
	gnome-foundation-budget-2011-summary.pdf \
	gnome-foundation-budget-2011.ods \
	gnome-foundation-fiscal-year-2004-balance-summary-draft.pdf \
	gnome-foundation-fiscal-year-2004-income-summary-draft.pdf \
	gnome-foundation-fiscal-year-2005-balance-summary.pdf \
	gnome-foundation-fiscal-year-2005-income-summary.pdf \
	guadec-budget-2004.pdf \
	guadec-budget-2006.ods \
	guadec-budget-2007.ods \
	guadec-budget-2008.ods \
	guadec-budget-consolidated.ods


include $(top_srcdir)/rules.common
