SUBDIRS =

urlpath = /reports
 
page_SCRIPTS = \
	index.html

page_DATA = \
	gnome-annual-report-2006.pdf	\
	gnome-annual-report-2007.pdf	\
	gnome-annual-report-2008.pdf	\
	gnome-report-2009-Q2.pdf	\
	gnome-report-2009-Q3.pdf	\
	gnome-report-2009-Q3.html	\
	gnome-report-2009-Q4.pdf	\
	gnome-report-2009-Q4.html	\
	gnome-report-2010-Q1.pdf	\
	gnome-report-2010-Q1.html	\
	gnome-report-2010-Q2.html	\
	gnome-annual-report-2009.pdf	\
	gnome-report-2010-Q3.html \
	gnome-report-2010-Q4.html \
	gnome-report-2011-Q1.html \
	gnome-report-2011-Q2.html

include $(top_srcdir)/rules.common
