SUBDIRS=

urlpath = /elections/2002
 
page_SCRIPTS = \
        index.html		\
	candidates.html		\
	preliminary_results.html	\
	verify.html		\
	voters.html		\
	rules.html

page_DATA = \
	list-addresses.py	\
	registered-voters.txt	\
	vote-counter.py		\
	results.txt		\
	vote-archives.diff

include $(top_srcdir)/rules.common
