urlpath = /img/logos

page_SCRIPTS =

page_DATA = \
	access.gif \
	canonical.png \
	debian.gif \
	fluendo.png \
	fsf.png \
	google.png \
	hp.gif \
	ibm.png \
	igalia.png \
	intel.png \
	motorola.png \
	mozilla-foundation.png \
	nokia.gif \
	novell.gif \
	olpc.gif \
	redhat.png \
	sflc.gif \
	sugarlabs.png \
	sun.png

include $(top_srcdir)/rules.common
