urlpath = /img/logos

page_SCRIPTS =

page_DATA = \
	canonical.jpg \
	collabora.png \
	debian.gif \
	fluendo.png \
	fsf.png \
	google.png \
	ibm.png \
	igalia.png \
	intel.png \
	motorola.png \
	mozilla-foundation.png \
	nokia.gif \
	novell.gif \
	olpc.gif \
	redhat.png \
	sflc.gif \
	sugarlabs.png \
	sun.png

include $(top_srcdir)/rules.common
