urlpath = /img/logos

page_SCRIPTS =

page_DATA = \
	canonical.png \
	collabora.png \
	debian.png \
	fluendo.png \
	fsf.png \
	google.png \
	ibm.png \
	igalia.png \
	intel.png \
	limo.png \
	motorola.png \
	mozilla-foundation.png \
	nokia.gif \
	novell.gif \
	olpc.gif \
	oracle.jpg \
	redhat.png \
	sflc.gif \
	sugarlabs.png

include $(top_srcdir)/rules.common
